--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 links in the navigation are in the hover or focus state.*/
 
 nav a:hover, nav a:focus{
-     text-decoration: underline;
+     text-decoration-line: underline;
 }
 
 /* Step 2a: Write selector/rule property to position the default position for the skip class element*/
@@ -24,7 +24,7 @@ nav a:hover, nav a:focus{
 
 /* Step 3: Write selector/rule property to style all elements when in focus*/
 
-:focus {
+*:focus {
      border: 2px solid #000000;
 }
 
@@ -37,14 +37,20 @@ first div in the grid  and place it in the grid. */
 /*This will be a lot of rules.... but be strategic and combine seletors*/
  /* Step 8: Write the selector/rule property to style the .text-block class. */
 /* Add your media query here */
-@media screen and (min-width: 700px){
+@media screen {
      .container{
           display: grid;
           grid-template-columns: 1fr 5fr 1fr;
           row-gap: 15px;
+          align-items: center;
      }
      .container > *:first-child{
           grid-column: 1 / -1;
+          background-image: url("../images/header.jpg");
+          background-attachment: fixed;
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
      }
      .about , .method, .clients, .contact {
           grid-column: 2 / span 1;
@@ -90,18 +96,20 @@ first div in the grid  and place it in the grid. */
      .text-block {
           display: grid;
           justify-content: center;
+          align-content: center;
           align-items: center;
           text-align: center;
       }
-
 }
 
 @media screen and (min-width: 800px){
      /* Step 9: Write the selector/rule property to style the nav element */
 
-     nav ul {
+     nav {
           display: grid;
           grid-template-columns: 1fr auto;
+          justify-content: end;
+          justify-items: end;
           padding: 30px 0px;
      }
      
@@ -129,7 +137,7 @@ first div in the grid  and place it in the grid. */
 
      .text-block {
           max-height: 250px;
-          overflow: visible;
+          overflow: auto;
      }
 }
 
