--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ first div in the grid  and place it in the grid. */
      .container{
           display: grid;
           grid-template-columns: 1fr 5fr 1fr;
+          column-gap: 15px;
           row-gap: 15px;
           align-items: center;
      }
@@ -107,7 +108,6 @@ first div in the grid  and place it in the grid. */
 
      nav {
           display: grid;
-          grid-template-columns: 1fr auto;
           justify-content: end;
           justify-items: end;
           padding: 30px 0px;
